# langdetectpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_profiles.sh
example/: CMakeLists.txt  example.cpp
langdetectpp/: CMakeLists.txt
langdetectpp/include/langdetectpp/: detector.h  langdetectpp.h  language.h
langdetectpp/src/: detector.cpp  language.cpp
langdetectpp/src/detection/: detection_runner.cpp  detection_runner.h  detector_impl.h
langdetectpp/src/ngrams/: extracted_ngrams.h  ngram_extractor.cpp  ngram_extractor.h
langdetectpp/src/profiles/: profile.cpp  profile.h  profile_group.cpp  profile_group.h
langdetectpp/src/profiles/langs/: af.cpp  af.h  ar.cpp  ar.h  bg.cpp  bg.h  bn.cpp  bn.h  ca.cpp  ca.h  cs.cpp  cs.h  cy.cpp  cy.h  da.cpp  da.h  de.cpp  de.h  el.cpp  el.h  en.cpp  en.h  es.cpp  es.h  et.cpp  et.h  fa.cpp  fa.h  fi.cpp  fi.h  fr.cpp  fr.h  gu.cpp  gu.h  he.cpp  he.h  hi.cpp  hi.h  hr.cpp  hr.h  (+70 more)
langdetectpp/src/util/: circle_array.h  stats.h  tuple_hash.h
scripts/: transform_profile.py
tests/: CMakeLists.txt  functional_tests.cpp
tests/text/: en_from_wikipedia.txt
